# vgmtrans-qt

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
src/main/: BytePattern.cpp  BytePattern.h  DLSFile.cpp  DLSFile.h  DataSeg.cpp  DataSeg.h  ExtensionDiscriminator.cpp  ExtensionDiscriminator.h  Format.cpp  Format.h  Loader.cpp  Loader.h  LogItem.cpp  LogItem.h  Loop.h  Matcher.cpp  Matcher.h  Menu.h  MidiFile.cpp  MidiFile.h  Options.h  PSFFile.cpp  PSFFile.h  RawFile.cpp  RawFile.h  RiffFile.cpp  RiffFile.h  Root.cpp  Root.h  SF2File.cpp  SF2File.h  ScaleConversion.cpp  ScaleConversion.h  Scanner.cpp  Scanner.h  SeqEvent.cpp  SeqEvent.h  SeqSlider.cpp  SeqSlider.h  SeqTrack.cpp  (+36 more)
src/main/formats/: AkaoFormat.cpp  AkaoFormat.h  AkaoInstr.cpp  AkaoInstr.h  AkaoScanner.cpp  AkaoScanner.h  AkaoSeq.cpp  AkaoSeq.h  AkaoSnesFormat.h  AkaoSnesInstr.cpp  AkaoSnesInstr.h  AkaoSnesScanner.cpp  AkaoSnesScanner.h  AkaoSnesSeq.cpp  AkaoSnesSeq.h  CapcomSnesFormat.h  CapcomSnesInstr.cpp  CapcomSnesInstr.h  CapcomSnesScanner.cpp  CapcomSnesScanner.h  CapcomSnesSeq.cpp  CapcomSnesSeq.h  ChunSnesFormat.h  ChunSnesInstr.cpp  ChunSnesInstr.h  ChunSnesScanner.cpp  ChunSnesScanner.h  ChunSnesSeq.cpp  ChunSnesSeq.h  CompileSnesFormat.h  CompileSnesInstr.cpp  CompileSnesInstr.h  CompileSnesScanner.cpp  CompileSnesScanner.h  CompileSnesSeq.cpp  CompileSnesSeq.h  FFTFormat.h  FFTInstr.cpp  FFTInstr.h  FFTScanner.cpp  (+182 more)
src/main/loaders/: GSFLoader.cpp  GSFLoader.h  KabukiDecrypt.cpp  KabukiDecrypt.h  MAMELoader.cpp  MAMELoader.h  NCSFLoader.cpp  NCSFLoader.h  NDS2SFLoader.cpp  NDS2SFLoader.h  PSF1Loader.cpp  PSF1Loader.h  PSF2Loader.cpp  PSF2Loader.h  SNSFLoader.cpp  SNSFLoader.h  SPCLoader.cpp  SPCLoader.h
src/ui/qt/: Helpers.cpp  Helpers.h  HexView.cpp  HexView.h  MdiArea.cpp  MdiArea.h  MusicPlayer.cpp  MusicPlayer.h  QtVGMRoot.cpp  QtVGMRoot.h  RawFileListView.cpp  RawFileListView.h  VGMCollListView.cpp  VGMCollListView.h  VGMFileItemModel.cpp  VGMFileItemModel.h  VGMFileListView.cpp  VGMFileListView.h  VGMFileTreeView.cpp  VGMFileTreeView.h  VGMFileView.cpp  VGMFileView.h  droparea.cpp  droparea.h  dropsitewindow.cpp  dropsitewindow.h  main_ui.cpp  main_ui.h  mainwindow.cpp  mainwindow.h  osdepend.cpp  osdepend.h
